Fixed loader text size and gif alignment

--- a/styles.css
+++ b/styles.css
@@ -64,10 +64,15 @@ body::before {
 }
 
 /* ================= LOADER ================= */
+body.loading {
+    overflow: hidden;
+    height: 100vh;
+}
+
 #loader-wrapper {
     position: fixed;
-    top: 50;
-    left: 50;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: #FFFAFC;
@@ -79,7 +84,10 @@ body::before {
 }
 
 .loader-content {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .loader-gif {
@@ -87,15 +95,16 @@ body::before {
     max-width: 100%;
     height: auto;
     margin-bottom: 20px;
-    margin-left: -50px;
+    outline: 0px solid red;
+
+    transform: translateX(-20px);
 }
 
 .loader-text {
     font-family: 'Belgiano Serif', sans-serif; 
     color: #A58670;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     letter-spacing: 1px;
-    margin-top: -50px;
     animation: pulse 1.5s infinite ease-in-out;
 }
 
